# mlops-zoomcamp

./: .gitignore  README.md
.unotes/: unotes_meta.json
02-experiment-tracking/: pyproject.toml
02-experiment-tracking/running-mlflow-examples/: scenario-2.ipynb
cohorts/2023/: .gitignore
cohorts/2023/.unotes/: unotes_meta.json
cohorts/2023/01-intro/: pyproject.toml
cohorts/2023/01-intro/docs/: MLOps zoomcamp notes w1.md
cohorts/2023/01-intro/notebooks/: duration-prediction.ipynb  hw1.ipynb
cohorts/2023/02-experiment-tracking/: pyproject.toml
cohorts/2023/02-experiment-tracking/docs/: MLOps zoomcamp notes w2.md  MLOps zoomcamp notes w2_w3.md
cohorts/2023/02-experiment-tracking/homework/: hpo.py  hw2_answ.md  register_model.py  train.py
cohorts/2023/02-experiment-tracking/homework-wandb/: hw2_wandb_answ.md  regressor.pkl  sweep.py  train.py
cohorts/2023/02-experiment-tracking/homework/output/: dv.pkl
cohorts/2023/02-experiment-tracking/notebooks/: duration-prediction.ipynb  model-registry.ipynb
cohorts/2023/02-experiment-tracking/running-mlflow-examples/: scenario-1.ipynb
cohorts/2023/03-orchestration/: README.md
cohorts/2023/03-orchestration/docs/: MLOps zoomcamp notes w4.md
cohorts/2023/04-deployment/batch/: pyproject.toml  score.ipynb  score.py
cohorts/2023/04-deployment/docs/: MLOps zoomcamp notes 05deploy.md
cohorts/2023/04-deployment/my_hw/: Dockerfile  Pipfile  requirements.txt  score.py  starter.ipynb
cohorts/2023/04-deployment/streaming/: Dockerfile  lambda_function.py  pyproject.toml  requirements.txt  test.py  test_docker.py
cohorts/2023/04-deployment/web-service/: Dockerfile  predict.py  pyproject.toml  requirements.txt  test.py
cohorts/2023/04-deployment/web-service-mlflow/: predict.py  pyproject.toml  random-forest.ipynb
cohorts/2023/05-monitoring/taxi_monitoring/: baseline_model_nyc_taxi_data.ipynb  check_days_in_month.py  check_timezone.py  docker-compose.yml  dummy_metrics_calculation.py  hw1.ipynb  hw2.py  pyproject.toml  requirements_pinned.txt
cohorts/2023/05-monitoring/taxi_monitoring/dashboards/: data_drift.json  taxi data drift-1688301533246.json
cohorts/2023/05-monitoring/taxi_monitoring/docs/: MLOps zoomcamp notes 05monitoring.md
cohorts/2023/06-best-practices/my_hw/: batch.py  docker-compose.yaml  integration_test.py
cohorts/2023/06-best-practices/my_hw/docs/: MLOps zoomcamp notes 06best_practices.md
cohorts/2023/06-best-practices/my_hw/tests/: test_batch.py
cohorts/2023/06/code/: .gitignore  Dockerfile  Makefile  lambda_function.py  model.py  pyproject.toml  test_docker.py
cohorts/2023/06/code/integration-test/: docker-compose.yaml  event.json  test_docker.py  test_kinesis.py
cohorts/2023/06/code/integration-test/model/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
cohorts/2023/06/code/tests/: model_test.py
