[tool.poetry]
name = "01-intro"
version = "0.1.0"
description = ""
authors = ["lucapug <lucapug@gmail.com>"]
readme = "README.md"
packages = [{include = "01_intro"}]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^2.0.1"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
fastparquet = "^2023.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
