[tool.poetry]
name = "batch"
version = "0.1.0"
description = ""
authors = ["lucapug <lucapug@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "1.2.2"
mlflow = "2.3.1"
pandas = "^2.0.2"
pyarrow = "<12"
fsspec = "^2023.6.0"
boto3 = "1.26.76"
s3fs = "^2023.6.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
