[tool.poetry]
name = "streaming"
version = "0.1.0"
description = ""
authors = ["lucapug <lucapug@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "1.2.2"
mlflow = "2.3.1"
boto3 = "^1.27.0"
numpy = "1.24.3"
psutil = "5.9.5"


[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
