[tool.poetry]
name = "web-service"
version = "0.1.0"
description = ""
authors = ["lucapug <lucapug@gmail.com>"]
readme = "README.md"
packages = [{include = "web_service"}]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "1.2.2"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
