[tool.poetry]
name = "taxi-monitoring"
version = "0.1.0"
description = ""
authors = ["lucapug <lucapug@gmail.com>"]
readme = "README.md"
packages = [{include = "taxi_monitoring"}]

[tool.poetry.dependencies]
python = "^3.8"
prefect = "2.10.12"
tqdm = "^4.65.0"
requests = "^2.31.0"
joblib = "^1.3.0"
pyarrow = "^12.0.1"
psycopg = "^3.1.9"
psycopg-binary = "^3.1.9"
evidently = "^0.3.3"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
