[tool.poetry]
name = "best-practices"
version = "0.1.0"
description = ""
authors = ["lucapug <lucapug@gmail.com>"]
readme = "README.md"
packages = [{include = "best_practices"}]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "1.2.2"
mlflow = "2.3.1"
boto3 = "^1.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
requests = "^2.31.0"
deepdiff = "^6.3.1"
pylint = "^2.17.4"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring", 
    "missing-class-docstring", 
    "missing-function-docstring",
    "missing-final-newline",
    "invalid-name",
    "too-few-public-methods"
]

[tool.black]
line-length = 88
target-version = ['py39']
skip-string-normalization = true
